infra/analytics-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
      - name: analytics-service
        image: anurag2911/analytics-service:latest  
        ports:
        - containerPort: 8000  # Analytics service port
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
spec:
  selector:
    app: analytics-service
  ports:
  - protocol: TCP
    port: 8004  # Expose the analytics service on port 8004
    targetPort: 8000  # Map to the container's port
  type: ClusterIP
